devops/deploy_yamls/test/k8s/ingress-dev-edu-file-preview.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-test-edu-file-preview
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/cache-enable: "false"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"

spec:
  tls:
    - hosts:
        - test-edu-file-preview.deepblueai.com
      secretName: deepblueai-tls
  rules:
    - host: test-edu-file-preview.deepblueai.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kkfileview
              servicePort: 8012
