devops/deploy_yamls/test/k8s/kkfileview-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kkfileview-test
  namespace: education-test
  labels:
    app: kkfileview
    release: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kkfileview
      release: test
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: kkfileview
        release: test
    spec:
      nodeSelector:
        education: "true"
      containers:
        - name: kkfileview
          image: keking/kkfileview:latest
          env:
            # - name: server.context-path
            #   value: /kkfileview
            - name: server.port
              value: "8012"
            - name: office.preview.type
              value: "pdf"
          ports:
            - name: tcp-essential
              containerPort: 8012
              protocol: TCP

---
apiVersion: v1            #必须
kind: Service             #必须
metadata:                 #必须
  name: kkfileview
  namespace: education-test  #必须
  labels:
    service: kkfileview
spec:                   #必须
  selector:            #必须
    app: kkfileview
    release: test      #必须
  type: ClusterIP        #必须
  ports:
    - name: tcp-essential
      protocol: TCP
      port: 8012
      targetPort: 8012
