devops/deploy_yamls/test/k8s/nginx-proxy-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-proxy-server-test
  namespace: education-test
  labels:
    app: nginx-proxy-server
    release: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-proxy-server
      release: test
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: nginx-proxy-server
        release: test
    spec:
      nodeSelector:
        education: "true"
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: nginx-proxy-server
          image: core.harbor.cz.shenlan.com/dbp-edu/edu-proxy-test:latest
          imagePullPolicy: Always
          ports:
            - name: tcp-essential
              containerPort: 8000
              protocol: TCP
          volumeMounts:
            - mountPath: /storage
              name: vol
      volumes:
        - name: vol
          persistentVolumeClaim:
            claimName: edu-test-oss-pvc

---
apiVersion: v1            #必须
kind: Service             #必须
metadata:                 #必须
  name: nginx-proxy-server
  namespace: education-test  #必须
  labels:
    service: nginx-proxy-server
spec:                   #必须
  selector:            #必须
    app: nginx-proxy-server
    release: test      #必须
  type: NodePort        #必须
  ports:
    - name: tcp-essential
      protocol: TCP
      port: 8000
      targetPort: 8000
