devops/deploy_yamls/test/k8s/platform-management-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-management-test
  namespace: education-test
  labels:
    app: platform-management
    release: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platform-management
      release: test
  template:
    metadata:
      labels:
        app: platform-management
        release: test
    spec:
      nodeSelector:
        education: "true"
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: platform-management
          image: core.harbor.cz.shenlan.com/dbp-edu/platform-management:latest
          env:
            - name: ENV
              value: 'test'
            - name: KEYCLOAK_URL
              value: 'https://edu-auth-internel.deepblueai.com/auth'
            - name: KEYCLOAK_REALM
              value: 'test'
            - name: FILE_PREVIEW_URL
              value: 'https://test-edu-file-preview.deepblueai.com'
          ports:
            - name: tcp-essential
              containerPort: 8000
              protocol: TCP
---
apiVersion: v1            #必须
kind: Service             #必须
metadata:                 #必须
  name: platform-management
  namespace: education-test        #必须
  labels:
    service: platform-management
spec:                   #必须
  selector:            #必须
    app: platform-management
    release: test      #必须
  type: NodePort        #必须
  ports:
    - name: tcp-essential
      protocol: TCP
      port: 8000
      targetPort: 8000
