devops/deploy_yamls/test/k8s/terminal-teacher-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terminal-teacher-test
  namespace: education-test
  labels:
    app: terminal-teacher
    release: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: terminal-teacher
      release: test
  template:
    metadata:
      labels:
        app: terminal-teacher
        release: test
    spec:
      nodeSelector:
        education: "true"
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: terminal-teacher
          image: core.harbor.cz.shenlan.com/dbp-edu/terminal-teacher:latest
          env:
            - name: KEYCLOAK_URL
              value: 'https://edu-auth-internel.deepblueai.com/auth'
            - name: ENV
              value: test
            - name: KEYCLOAK_REALM
              value: test
          ports:
            - name: tcp-essential
              containerPort: 8000
              protocol: TCP
---
apiVersion: v1            #必须
kind: Service             #必须
metadata:                 #必须
  name: terminal-teacher
  namespace: education-test        #必须
  labels:
    service: terminal-teacher
spec:                   #必须
  selector:            #必须
    app: terminal-teacher
    release: test      #必须
  type: NodePort        #必须
  ports:
    - name: tcp-essential
      protocol: TCP
      port: 8000
      targetPort: 8000
